<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RaspAdmin</string>
    <string name="launchWebClient">Launch</string>
    <string name="action_settings">Settings</string>
	<string name="reset">There is no solution to recover your lock pattern :( You can reset the application by cicking on the following button</string>
	<string name="resetButton">Reset</string>   
	<string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="host">Host</string>
    <string name="ssl" >SSL</string>
    <string name="user">User</string>
    <string name="password">Password</string>
    <string name="port">Port</string>
    <string name="name">Name</string>
    <string name="send">Send</string>
    <string name="deletion">Delete this raspberry</string>
    <string name="really_delete">Confirm this deletion</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
</resources>
